--- a/bower.json
+++ b/bower.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "bootstrap": "~3",
     "angular": "~1.3",
-    "angular-resource": "~1.3",
-    "angular-animate": "~1.3",
+    "angular-resource": "~1.4.4",
+    "angular-animate": "~1.4.4",
     "angular-mocks": "~1.3",
     "angular-bootstrap": "~0.13",
     "angular-ui-utils": "bower",
@@ -17,6 +17,7 @@
     "owasp-password-strength-test": "~1.3.0"
   },
   "resolutions": {
-    "angular": "~1.3"
+    "angular": ">=1.4.4",
+    "angular-bootstrap": ">=1.2.4"
   }
 }
