--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "acl": "~0.4.4",
+    "angular-ui-bootstrap-datetimepicker": "^2.0.2",
     "async": "^1.3.0",
     "body-parser": "^1.13.1",
     "bower": "^1.4.1",
