--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,8 @@
     "angular": "~1.3",
     "angular-resource": "~1.4.4",
     "angular-animate": "~1.4.4",
+    "angular-animate": "1.5.9",
+    "angular-aria": "1.5.9",
     "angular-mocks": "~1.3",
     "angular-bootstrap": "~0.13",
     "angular-ui-utils": "bower",
