--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "angular-messages": "~1.3.17",
     "owasp-password-strength-test": "~1.3.0",
     "angular-ui-bootstrap-datetimepicker": "^2.5.0",
-    "angular-qr": "latest"
+    "angular-qr": "latest",
+    "textAngular": "1.5.16"
   },
   "resolutions": {
     "angular": ">=1.4.4",
